[package]
name = "tyoobe"
version = "0.1.0"
edition = "2024"

[dependencies]
axum = "0.8.7"
mongoose = "0.6.2"
mongodb = "3.4.1"
serde = { version = "1.0.228", features = ["derive"]}
bson = {version = "3.1.0", features = ["chrono-0_4", "serde"]}
dotenvy = "0.15.7"
tokio = { version = "1.48.0", features = ["rt-multi-thread", "macros"]}